# lua_eval_server

./: .dockerignore  requirements-dev.txt  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/lua_eval_server/: app.py  models.py  sessions.py
src/lua_eval_server/evaluator/: base.py  simple.py  stdio.py  subprocess.py
tests/: test_api.py  test_api_exit.py  test_api_garbage.py  test_api_persistence.py  test_garbage.py  test_persistence.py  test_self_referential.py  test_simple_evaluator.py  test_simple_table.py  test_simple_types.py
