[metadata]
name = lua_eval_server
description = An eval server for lua
author = Jordan Webb
author_email = jordan@caketop.app
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
  = src
include_package_data = True
python_requires = >= 3.11

[options.packages.find]
where=src

[tox:tox]
envlist = py311

[testenv]
deps =
  -r requirements.txt
  -r requirements-dev.txt
  pytest-memray
commands = pytest -v --memray {posargs}
